# embeded_c-

./: CMakeLists.txt  README.ledsetup  README.setup  script.sh
documentation/: README-compile  README.md
src/: CMakeLists.txt  led_service_defines.h  led_service_module.cpp  led_service_module.h  led_service_util.cpp  ledcontrol.cpp  ledcontrol.h  ledhal.h  ledservice_pull.py  logger.cpp  logger.h  notes.led_design  notes.setup
util/: main.cpp
